--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <button-2 id="reset-btn" onclick="reset()" >Reset</button-2>
             <div class="column">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 class="score" id="guest-score" >0</h2>
                 <div>
                     <button id= "guest-btn-1" onclick="increaseguestby1()" >+1</button>
